--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -30,7 +30,7 @@ jobs:
           # Get PR number (pull_request, merge_group or push)
           if [ ${{ github.event_name }} == 'pull_request' ]; then
             echo "Event type: pull request"
-            pr=${{ github.event.number }}
+            echo "PR #${{ github.event.number }}"
           elif [ ${{ github.event_name }} == 'merge_group' ]; then
             echo "Event type: merge queue"
             curl -sL -H "${{ env.accept }}" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
