--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -35,14 +35,12 @@ jobs:
             echo "Event type: merge queue"
             curl -sL -H "${{ env.accept }}" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                 -H "${{ env.api-version }}" \
-                https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_sha }}/pulls \
-                  | json
+                https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_sha }}/pulls
           elif [ ${{ github.event_name }} == 'push' ]; then
             echo "Event type: push"
             curl -sL -H "${{ env.accept }}" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                 -H "${{ env.api-version }}" \
-                https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.after }}/pulls \
-                  | json
+                https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.after }}/pulls
           else
             echo "Event type: ${{ github.event_name }}"
           fi
