--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -29,21 +29,26 @@ jobs:
         run: |
           # Get PR number (pull_request, merge_group or push)
           if [ ${{ github.event_name }} == 'pull_request' ]; then
+            echo "Commit: ${{ github.sha }}"
             echo "Event type: pull request"
             echo "PR #${{ github.event.number }}"
           elif [ ${{ github.event_name }} == 'merge_group' ]; then
+            echo "Commit: ${{ github.sha }}"
             echo "Event type: merge queue"
-            curl -sL -H "${{ env.accept }}" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                -H "${{ env.api-version }}" \
-                https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.merge_group.head_sha }}/pulls
+            echo "Head commit: ${{ github.event.merge_group.head_sha }}"
+            echo "Base commit: ${{ github.event.merge_group.base_sha }}"
           elif [ ${{ github.event_name }} == 'push' ]; then
+            echo "Commit: ${{ github.sha }}"
             echo "Event type: push"
             curl -sL -H "${{ env.accept }}" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                 -H "${{ env.api-version }}" \
                 https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.after }}/pulls
           else
+            echo "Commit: ${{ github.sha }}"
             echo "Event type: ${{ github.event_name }}"
           fi
+      - name: GitPython
+        run: pip install GitPython && ./.github/scripts/runme.py
 
   teardown:
     runs-on: ubuntu-latest
