--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -49,6 +49,8 @@ jobs:
           fi
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
       - name: GitPython
         run: pip install GitPython && ${{ github.workspace }}/.github/scripts/runme.py
 
